--- a/views/pokemon/show.ejs
+++ b/views/pokemon/show.ejs
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Pokemon show page</h1>
+
+    <h2> <%= pokemon[0].name %> </h2>
+    <img src= <%= pokemon[0].img %>>
 </body>
 </html>
