clickable pokemon with photo to show page

--- a/views/pokemon/show.ejs
+++ b/views/pokemon/show.ejs
@@ -8,5 +8,6 @@
 <body>
     <h1>Pokemon show page</h1>
     <a href="/pokemon">Back to Pokedex</a>
+    <img src= <%= pokemon[id].img %>>
 </body>
 </html>
