edit and delete work, fix functionality

--- a/views/pokemon/index.ejs
+++ b/views/pokemon/index.ejs
@@ -17,6 +17,12 @@
             <% for (let i = 0; i < pokemon.length; i++){ %>
                 <a href="pokemon/<%= i %>"><img src= <%= pokemon[i].img %>> </a>
                     <div class="dex-id"> <%= pokemon[i].id %></div>
+                    <div class="dex-name"> <%= pokemon[i].name %></div>
+                    
+
+                    <form action="/pokemon/<%= i %>?_method=DELETE" method="post">
+                        <input type="submit" value="delete">
+                    </form>
 
             <% } %>
         </ul>
