--- a/views/pokemons/index.ejs
+++ b/views/pokemons/index.ejs
@@ -10,17 +10,17 @@
     <h1>Pokedex</h1>
 
     <nav>
-        <a href="/pokemon/new">Add a new pokemon</a>
+        <a href="/pokemons/new">Add a new pokemon</a>
     </nav>
     <div class="poke-container">
         <ul>
-            <% for (let i = 0; i < pokemon.length; i++){ %>
-                <a href="pokemon/<%= i %>"><img src= <%= pokemon[i].img %>> </a>
-                    <div class="dex-id"> <%= pokemon[i].id %></div>
-                    <div class="dex-name"> <%= pokemon[i].name %></div>
+            <% for (let i = 0; i < pokemons.length; i++){ %>
+                <a href="pokemons/<%= i %>"><img src= <%= pokemons[i].img %>> </a>
+                    <div class="dex-id"> <%= pokemons[i].id %></div>
+                    <div class="dex-name"> <%= pokemons[i].name %></div>
                     
 
-                    <form action="/pokemon/<%= i %>?_method=DELETE" method="post">
+                    <form action="/pokemons/<%= i %>?_method=DELETE" method="post">
                         <input type="submit" value="delete">
                     </form>
 
