--- a/views/pokemons/new.ejs
+++ b/views/pokemons/new.ejs
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>New Pokemon</h1>
-    <form action="/pokemon" method="post">
+    <form action="/pokemons" method="post">
         <label>Name: <input type="text" name="name"></label>
+        <!-- <label>Add Pokemon: <input type="checkbox" name="addPokemon"></label>  -->
         
         <input type="submit" value="Create Pokemon"/>
     </form>
