--- a/views/pokemons/new.ejs
+++ b/views/pokemons/new.ejs
@@ -7,13 +7,17 @@
     <%- include("./css.ejs") %>
 </head>
 <body>
-    <h1>New Pokemon</h1>
-    <form action="/pokemons" method="post">
-        <label>Name: <input type="text" name="name"></label>
-        <!-- <label>Add Pokemon: <input type="checkbox" name="addPokemon"></label>  -->
-        
-        <input type="submit" value="Create Pokemon"/>
-    </form>
+    <div id="new-body">
+        <h1>New Pokemon</h1>
+        <form action="/pokemons" method="post" id="newform">
+            <fieldset id="newpokemon">
+                <legend>Add a pokemon to the pokedex</legend>
+                    <label for="name">Name: </label>
+                        <input type="text" name="name" class="new-input">
+                    <input type="submit" value="Create Pokemon" class="new-input"/>
+            </fieldset>
+        </form>
+    </div>
     
 </body>
 </html>
