--- a/public/style.css
+++ b/public/style.css
@@ -1,20 +1,126 @@
-h1 {
-    color: red
-}
-ul {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
-img {
-    border: solid black;
-    /* max-width: 50%;
-    max-height: 50%; */
-    /* align-items: center;
-    justify-content: center; */
+body {
+    padding: 1rem;
 }
 
-/* .poke-container {
-    width: 50%;
-} */
+h1 {
+    color: red;
+    text-align: center;
+}
+
+.poke-container {
+    border: solid red;
+    padding: 1rem;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.946);
+    width: 80%;
+    margin: auto;
+    
+}
+
+.dex-card {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 8px;
+    
+}
+
+img {
+    height: 4rem;
+    aspect-ratio: 1/1;
+}
+
+.pokemon {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid black;
+    padding: .5rem;
+    border-radius: 10px;
+    background: linear-gradient(white 0 55%, rgb(174, 165, 165) 55% 100%);
+    box-shadow: 2px 2px 2px rgb(106, 104, 103);
+}
+
+.pokemon:hover {
+    background: linear-gradient(white 0 55%, rgb(208, 58, 58) 55% 100%);
+}
+
+
+@media (max-width: 540px) {
+    .dex-card {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+
+@media (max-width: 400px) {
+    .dex-card {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/******* NEW PAGE *********/
+#newform {
+    width: 90%;
+    box-sizing: border-box;
+}
+
+fieldset {
+    border: 5px solid rgb(174, 165, 165);
+    border-radius: 1rem;
+    padding: 20px;
+    margin: 20px 0;
+}
+
+legend {
+    padding: 0px 10px;
+    color: red;
+}
+
+label {
+    color: red;
+    font-weight: bolder;
+    display: block;
+}
+
+.new-input {
+    width: 100%;
+    margin: 10px 0;
+    padding: 10px;
+    box-sizing: border-box;
+    border-radius: 5px;
+}
+
+.new-input:focus {
+    outline: 0;
+    border: 5px solid red;
+}
+
+.new-input[type="submit"] {
+    width: 100%;
+    height: 50px;
+    background-color: red;
+    box-shadow: 2px 2px rgb(174, 165, 165);
+    font-size: 1.3em;
+    color: whitesmoke;
+    border: 0px;
+    transition: 0.2s ease-in-out;
+}
+
+.new-input[type="submit"]:hover {
+    cursor: pointer;
+    background-color: rgb(174, 165, 165);
+    box-shadow: 2px 2px red;
+}
+
+#new-body {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+
+
+
