--- a/views/pokemons/index.ejs
+++ b/views/pokemons/index.ejs
@@ -6,11 +6,11 @@
     <title>OG Pokedex</title>
     <%- include("./css.ejs") %>
 </head>
-<body>
+<body id="index-body">
     <h1>Pokedex</h1>
 
     <nav>
-        <a href="/pokemons/new">Add a new pokemon</a>
+        <a href="/pokemons/new" class="link-to-new">Add a new pokemon</a>
     </nav>
     <div class="poke-container">
         <div class="dex-card"> <!-- controlling the children MIND CONTORL-->
