--- a/views/pokemons/show.ejs
+++ b/views/pokemons/show.ejs
@@ -6,6 +6,7 @@
     <title>Document</title>
     <%- include("./css.ejs") %>
 </head>
+
 <body id="show-body">
     <a href="/pokemons" id="show-link">Back to Pokedex</a>
     <!-- <h1 id="show-h1">Pokemon show page</h1> -->
@@ -15,8 +16,8 @@
         <img src= <%= pokemon.img %> class="show-pokemon-img">
         <div class="show-id"> <%= pokemon.id %></div>
         <div class="show-name"> <%= pokemon.name %></div>
-        <div class="show-type">Type: <%= pokemon.type %></div>
-        <div class="show-stats">Stats: <%= Object.entries(pokemon.stats).map(space => space.join(': ')).join(', ') %></div>
+        <div class="show-type">Type: <%= pokemon.type.join(', ') %></div>
+        <div class="show-stats">Stats: <%= Object.entries(pokemon.stats).map(stat => stat.join(': ')).join(' ') %></div>
         <div class="show-happy">Happiness: <%= pokemon.misc.happiness %></div>
     
 
